Merge from trunk
svn merge fails due to number of changes,
git merge also fails during push on rebase stage,
thus I have to make the merge as a single commit using diff

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/CPALockator-combat-mode@38510 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c