@@ -12,7 +12,6 @@ import com.google.common.base.Preconditions;
 import com.google.common.base.Predicates;
 import com.google.common.collect.Iterables;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.ClassOption;
@@ -57,7 +56,7 @@ public abstract class AbstractBAMCPA extends AbstractSingleWrapperCPA {
 
   @Option(secure = true, description = "export blocks")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path exportBlocksPath = Paths.get("block_cfa.dot");
+  private Path exportBlocksPath = Path.of("block_cfa.dot");
 
   @Option(secure = true, description = "export reached set")
   private boolean exportReachedSet = true;
