@@ -13,7 +13,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -38,6 +37,7 @@ import org.sosy_lab.cpachecker.util.statistics.ThreadSafeTimerContainer;
 
 /** Prints some BAM related statistics */
 @Options(prefix = "cpa.bam")
+@SuppressWarnings("deprecation")
 class BAMCPAStatistics implements Statistics {
 
   // stats about refinement
@@ -78,7 +78,7 @@ class BAMCPAStatistics implements Statistics {
 
   @Option(secure = true, description = "file for exporting detailed statistics about blocks")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path blockStatisticsFile = Paths.get("block_statistics.txt");
+  private Path blockStatisticsFile = Path.of("block_statistics.txt");
 
   private final LogManager logger;
   private final AbstractBAMCPA cpa;
