@@ -14,7 +14,6 @@ import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Iterator;
 import java.util.Objects;
 import java.util.logging.Level;
@@ -45,7 +44,7 @@ public class ETVErrorTracePrinter extends ErrorTracePrinter {
 
   @Option(name = "output", description = "path to write results", secure = true)
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path outputStatFileName = Paths.get("unsafe_rawdata");
+  private Path outputStatFileName = Path.of("unsafe_rawdata");
 
   @Option(
     description = "use single file for output or dump every error trace to its own file",
@@ -69,12 +68,11 @@ public class ETVErrorTracePrinter extends ErrorTracePrinter {
   protected void init() {
     try {
       globalWriter =
-          Files.newBufferedWriter(
-              Paths.get(outputStatFileName.toString()), Charset.defaultCharset());
+          Files.newBufferedWriter(Path.of(outputStatFileName.toString()), Charset.defaultCharset());
       logger.log(Level.FINE, "Print statistics about unsafe cases");
       printCountStatistics(globalWriter, container.getUnsafeIterator());
     } catch (IOException e) {
-      logger.log(Level.SEVERE, "Exception during init actions: " + e.getMessage());
+      logger.logUserException(Level.WARNING, e, "I/O error during init actions");
     }
   }
 
@@ -83,7 +81,7 @@ public class ETVErrorTracePrinter extends ErrorTracePrinter {
     try {
       globalWriter.close();
     } catch (IOException e) {
-      logger.log(Level.SEVERE, "Exception during finish actions: " + e.getMessage());
+      logger.logUserException(Level.WARNING, e, "I/O error during finish actions");
     }
   }
 
@@ -106,7 +104,7 @@ public class ETVErrorTracePrinter extends ErrorTracePrinter {
       } else if (id instanceof LocalVariableIdentifier) {
         writer.append("##" + ((LocalVariableIdentifier) id).getFunction() + "\n");
       } else {
-        logger.log(Level.WARNING, "What is it? " + id.toString());
+        logger.log(Level.WARNING, "What is it? " + id);
       }
       writer.append(id.getDereference() + "\n");
       writer.append(id.getType().toASTString(id.getName()) + "\n");
@@ -126,7 +124,7 @@ public class ETVErrorTracePrinter extends ErrorTracePrinter {
       }
       printedUnsafes.inc();
     } catch (IOException e) {
-      logger.log(Level.SEVERE, "Exception while printing unsafe " + id + ": " + e.getMessage());
+      logger.logfUserException(Level.WARNING, e, "I/O error while printing unsafe %s", id);
     }
   }
 
